# f1-fantasy-ml-api

./: .gitignore  Dockerfile  README.md  dvc.yaml  heroku.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
app/: __init__.py  api.py  main.py  model.py  predict.py  schemas.py  utils.py
app/models/: mainrace_pipeline.py  qualifying_pipeline.py  status_pipeline.py
app/preprocess/: __init__.py  preprocess_general.py  preprocess_helper.py  preprocess_mainrace.py  preprocess_qualifying.py  preprocess_status.py
app/schemas/: dto.py
app/services/: feature_builder.py  feature_service.py  model_service.py
data/: processed.dvc
data/processed/: .gitignore  circuits.csv.dvc  cleaned_data_main_race_with_median.csv  cleaned_data_main_race_with_median.csv.dvc  cleaned_data_qualifying_with_median.csv.dvc  constructors.csv.dvc  (+10 more)
model/: .gitignore  metadata.json
models/: .gitignore  mainrace_metadata.json  qualifying_metadata.json  status_metadata.json  trained_mainrace_pipeline.pkl.dvc  trained_qualifying_pipeline.pkl.dvc  trained_status_pipeline.pkl.dvc
research/: Thesis-Qualifying.ipynb  Thesis-Status.ipynb  Thesis.ipynb
scripts/: create_mainrace_training.py  create_qualifying_training.py  create_status_training.py  create_training.py  extract_jolpica_dump.py  heroku_release.sh  pipeline.sh  rebuild_processed_data.py  release.sh  train_mainrace_model.py  train_qualifying_model.py  train_status_model.py
src/: __init__.py  main.py
tests/: conftest.py  test_feature_builder.py  test_predict.py  test_predict_batch.py  test_preprocess.py
(+26 files in other folders)
