[project]
name = "f1-fantasy-ml-api"
version = "0.1.0"
description = "ML service for WooF1"
readme = "README.md"
requires-python = "==3.11.8"

dependencies = [
  # Core web
  "fastapi==0.118.0",
  "fastapi[standard]==0.118.0",
  "uvicorn==0.37.0",
  "uvicorn[standard]==0.37.0",

  # Data science / ML
  "numpy==2.1.3",
  "pandas==2.3.3",
  "scikit-learn==1.7.2",
  "lightgbm==4.6.0",
  "joblib==1.5.2",
  "autogluon==1.4.0",

  # App support
  "python-dotenv==1.1.1",
  "pydantic==2.11.10",
  "pydantic_core==2.33.2",
  "requests==2.32.5",

  # DVC + GCS remote
  "dvc==3.63.0",
  "gcsfs==2025.3.0",
  "dvc-gs==3.0.2"
]

[dependency-groups]
dev = [
  "pytest==8.4.2"
]